[gd_scene load_steps=53 format=2]

[ext_resource path="res://khal idle-Sheet.png" type="Texture" id=1]
[ext_resource path="res://KHAL SLICE FINAL-Sheet.png" type="Texture" id=2]
[ext_resource path="res://khal jump-Sheet.png" type="Texture" id=3]
[ext_resource path="res://khal walk-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Charac.gd" type="Script" id=5]
[ext_resource path="res://khal arrow-Sheet.png" type="Texture" id=6]
[ext_resource path="res://khal death-Sheet.png" type="Texture" id=7]
[ext_resource path="res://ConnectionII.tres" type="DynamicFont" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 840, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 960, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 720, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 840, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1080, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 840, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 120, 120 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "slicer",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 17.178, 47.2466 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 10, 37.4316 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 10, 38.2738 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 16.5, 44 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 19.2333, 43.5 )

[sub_resource type="Animation" id=44]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("damaged:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("damaged:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16.4949, -31.0068 ), Vector2( -15.7458, -69.2136 ), Vector2( 11.9729, -63.9695 ), Vector2( 26.956, -70.7119 ) ]
}

[node name="Charac" type="KinematicBody2D"]
collision_layer = 23073
collision_mask = 23073
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.51984, -18.8988 )
frames = SubResource( 38 )
animation = "slicer"
frame = 5
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.25992, -11.9693 )
shape = SubResource( 39 )

[node name="attackArea" type="Area2D" parent="." groups=[
"damaged",
]]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
position = Vector2( 50.0565, -11.3461 )
shape = SubResource( 40 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="attackArea"]
position = Vector2( -45.458, -11.1727 )
shape = SubResource( 41 )
disabled = true

[node name="Hit_life" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_life"]
position = Vector2( 0.5, -15.5 )
shape = SubResource( 42 )

[node name="collected" type="Area2D" parent="." groups=[
"player",
]]
collision_layer = 32800
collision_mask = 32800

[node name="CollisionShape2D" type="CollisionShape2D" parent="collected"]
position = Vector2( 1.25084, -14.2424 )
shape = SubResource( 43 )

[node name="bullet_position" type="Position2D" parent="."]
position = Vector2( 39.4174, -7.51928 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.420456, 0 )
current = true
limit_left = 0
limit_top = 3
limit_right = 884
limit_bottom = 416
limit_smoothed = true

[node name="player_damaged" type="AnimationPlayer" parent="."]
anims/life = SubResource( 44 )

[node name="damaged" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.956
margin_top = -70.7119
margin_right = 59.956
margin_bottom = -0.711899
custom_fonts/font = ExtResource( 8 )
text = "1
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hit_life" to="." method="_on_Hit_life_area_entered"]
